--- a/index.html
+++ b/index.html
@@ -44,11 +44,20 @@
                 <li><a class="dropdown-item" href="Juegos/Snake/index.html" target="_BLANK">Snake</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://karel95.github.io" target="_BLANK">Developer</a></li>
+                <li><a class="dropdown-item" href="#">Mas productos...</a></li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Servicios
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Juegos/Toros y Vacas/index.html" target="_BLANK">Toros y Vacas</a></li>
+                <li><a class="dropdown-item" href="Juegos/Snake/index.html" target="_BLANK">Snake</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Mas servicios</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://karel95.github.io" target="_BLANK">Developer</a>
@@ -69,14 +78,14 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <nav class="sidebar-nav">
-        <a href="/sobre-nosotros"><i class="fas fa-info-circle"></i> <span>Sobre Nosotros</span></a>
-        <a href="/equipo"><i class="fas fa-users"></i> <span>Nuestro Equipo</span></a>
-        <a href="/proyectos"><i class="fas fa-project-diagram"></i> <span>Proyectos</span></a>
-        <a href="/blog"><i class="fas fa-blog"></i> <span>Blog</span></a>
-        <a href="/soporte"><i class="fas fa-headset"></i> <span>Soporte</span></a>
+        <a href="/sobre-nosotros"><i class="bi bi-info-square fas fa-info-circle"></i> <span> Sobre Nosotros</span></a>
+        <a href="/equipo"><i class="bi bi-people fas fa-users"></i> <span> Nuestro Equipo</span></a>
+        <a href="/proyectos"><i class="bi bi-collection fas fa-project-diagram"></i> <span> Proyectos</span></a>
+        <a href="/blog"><i class="bi bi-pencil-square fas fa-blog"></i> <span> Blog</span></a>
+        <a href="mailto:karelh2207@gmail.com"><i class="bi bi-telephone fas fa-headset"></i> <span> Soporte</span></a>
       </nav>
       <button class="sidebar-toggle" id="sidebarToggle">
-        <i class="fas fa-chevron-left"></i>
+        <i class="bi bi-arrow-left fas fa-chevron-left"></i>
       </button>
     </aside>
 
@@ -85,9 +94,11 @@
       <!-- Seccion Hero -->
       <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de Karel Hernández">
-        <h1>Hola, soy Karel Hernández</h1>
-        <h2>Desarrollo sitios web y videojuegos.</h2>
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/profile-photo.jpg" alt="Foto de HiTech Studio">
+        <h1>HiTech Studio</h1>
+        <h2>Desarrollo de sitios web y videojuegos.</h2>
+        <p>Transformando ideas en soluciones tecnológicas avanzadas para impulsar tu negocio.</p>
+      <a href="/contacto" class="btn btn-primary cta-button">Explora Nuestras Soluciones</a>
       </div>
       <div class="hero-inferior">
         <img class="hero-inferior-imagen img-fluid" src="imagenes/hero-inferior.svg" alt="Monitor, laptop y logos de HTML, CSS, JavaScript y React.">
@@ -97,8 +108,8 @@
       <!-- Sobre mi -->
       <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoce a Karel Hernández</h2>
-        <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis nunc, vel hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est. Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices suscipit. Proin lacinia leo ac posuere placerat.</p>
+        <h2 class="seccion-titulo">HiTech Studio</h2>
+        <p class="seccion-texto">Somos un equipo dedicado al diseño, desarrollo y lanzamiento de software interactivo, que incluye aplicaciones web, móviles y videojuegos. Estamos enfocados en la creación de experiencias digitales, abarcando desde la conceptualización y el diseño de interfaces hasta la programación y pruebas de productos. Nuestro equipo esta compuesto por diseñadores, programadores, artistas y expertos en marketing que trabajamos en conjunto para producir aplicaciones y juegos innovadores, atractivos y funcionales para una variedad de plataformas como Android, iOS, consolas y PC.</p>
       </div>
       </section>
 
@@ -403,7 +414,7 @@
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Karel Hernández (2024) &#169;</div>
+      <div class="derechos-de-autor">2024 HiTech Studio. Todos los derechos reservados &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -448,9 +459,9 @@
         sidebarToggle.addEventListener('click', () => {
           body.classList.toggle('sidebar-collapsed');
           if (body.classList.contains('sidebar-collapsed')) {
-            sidebarToggle.innerHTML = '<i class="fas fa-chevron-right"></i>';
+            sidebarToggle.innerHTML = '<i class="bi bi-arrow-right fas fa-chevron-right"></i>';
           } else {
-            sidebarToggle.innerHTML = '<i class="fas fa-chevron-left"></i>';
+            sidebarToggle.innerHTML = '<i class="bi bi-arrow-left fas fa-chevron-left"></i>';
           }
         });
       });
