--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   </head>
   <body>
     <!-- Navbar -->
-    <header class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+    <header class="navbar fixed-top navbar-expand-lg ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">HiTech Studio</a>
+        <a class="logo" href="#">Studio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse container-fluid" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +49,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Servicios
+                Services
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="Juegos/Toros y Vacas/index.html" target="_BLANK">Toros y Vacas</a></li>
@@ -68,7 +68,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success-changed" type="submit">Search</button>
+            <button class="btn btn-dark btn-outline-success-changed" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -95,7 +95,7 @@
       <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
         <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/profile-photo.jpg" alt="Foto de HiTech Studio">
-        <h1>HiTech Studio</h1>
+        <h1>Studio</h1>
         <h2>Desarrollo de sitios web y videojuegos.</h2>
         <p>Transformando ideas en soluciones tecnológicas avanzadas para impulsar tu negocio.</p>
       <a href="/contacto" class="btn btn-primary cta-button">Explora Nuestras Soluciones</a>
@@ -108,7 +108,7 @@
       <!-- Sobre mi -->
       <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">HiTech Studio</h2>
+        <h2 class="seccion-titulo">Studio</h2>
         <p class="seccion-texto">Somos un equipo dedicado al diseño, desarrollo y lanzamiento de software interactivo, que incluye aplicaciones web, móviles y videojuegos. Estamos enfocados en la creación de experiencias digitales, abarcando desde la conceptualización y el diseño de interfaces hasta la programación y pruebas de productos. Nuestro equipo esta compuesto por diseñadores, programadores, artistas y expertos en marketing que trabajamos en conjunto para producir aplicaciones y juegos innovadores, atractivos y funcionales para una variedad de plataformas como Android, iOS, consolas y PC.</p>
       </div>
       </section>
