--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <nav class="sidebar-nav">
-        <a href="/sobre-nosotros"><i class="bi bi-info-square fas fa-info-circle"></i> <span> Sobre Nosotros</span></a>
-        <a href="/equipo"><i class="bi bi-people fas fa-users"></i> <span> Nuestro Equipo</span></a>
-        <a href="/proyectos"><i class="bi bi-collection fas fa-project-diagram"></i> <span> Proyectos</span></a>
-        <a href="/blog"><i class="bi bi-pencil-square fas fa-blog"></i> <span> Blog</span></a>
-        <a href="mailto:karelh2207@gmail.com"><i class="bi bi-telephone fas fa-headset"></i> <span> Soporte</span></a>
+        <a href="#studio"><i class="bi bi-info-square fas fa-info-circle"></i> <span> Sobre Nosotros</span></a>
+        <a href="#equipo"><i class="bi bi-people fas fa-users"></i> <span> Nuestro Equipo</span></a>
+        <a href="#proyectos"><i class="bi bi-collection fas fa-project-diagram"></i> <span> Proyectos</span></a>
+        <a href="#blog"><i class="bi bi-pencil-square fas fa-blog"></i> <span> Blog</span></a>
+        <a href="#contacto"><i class="bi bi-telephone fas fa-headset"></i> <span> Soporte</span></a>
       </nav>
       <button class="sidebar-toggle" id="sidebarToggle">
         <i class="bi bi-arrow-left fas fa-chevron-left"></i>
@@ -105,8 +105,8 @@
       </div>
       </section>
 
-      <!-- Sobre mi -->
-      <section id="sobre-mi" class="sobre-mi seccion-oscura">
+      <!-- Studio -->
+      <section id="studio" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Studio</h2>
         <p class="seccion-texto">Somos un equipo dedicado al diseño, desarrollo y lanzamiento de software interactivo, que incluye aplicaciones web, móviles y videojuegos. Estamos enfocados en la creación de experiencias digitales, abarcando desde la conceptualización y el diseño de interfaces hasta la programación y pruebas de productos. Nuestro equipo esta compuesto por diseñadores, programadores, artistas y expertos en marketing que trabajamos en conjunto para producir aplicaciones y juegos innovadores, atractivos y funcionales para una variedad de plataformas como Android, iOS, consolas y PC.</p>
@@ -114,7 +114,7 @@
       </section>
 
       <!-- Experiencia -->
-      <section class="experiencia seccion-clara">
+      <section id="equipo" class="experiencia seccion-oscura">
       <div class="container text-center">
         <div class="row">
           <!-- Desarrollo Web -->
@@ -156,9 +156,9 @@
       </div>
       </section>
 
-      <!-- Productos -->
-      <section id="productos" class="proyectos-recientes seccion-clara d-flex flex-column">
-      <h2 class="seccion-titulo texto-negro">Mis proyectos recientes</h2>
+      <!-- Proyectos -->
+      <section id="proyectos" class="proyectos-recientes seccion-oscura d-flex flex-column">
+      <h2 class="seccion-titulo">Mis proyectos recientes</h2>
       <h3 class="seccion-descripcion">Estos son algunos proyectos que he creado recientemente...</h3>
       <!-- Galeria de Proyectos -->
       <div class="container text-center proyectos-contenedor">
@@ -276,8 +276,8 @@
       </section>
 
       <!-- Articulos -->
-      <section class="articulos justify-content-start">
-      <h2 class="seccion-titulo texto-negro">Artículos</h2>
+      <section id="blog" class="articulos justify-content-start">
+      <h2 class="seccion-titulo">Artículos</h2>
       <div class="card">
         <div class="card-header">
           Más recientes
@@ -310,7 +310,7 @@
           </a>
         </ul>
       </div>
-      <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+      <a href="https://karel95.hashnode.dev/" target="_blank" rel="noopener noreferrer">
         <button type="button" class="btn btn-info">
           Ver más artículos
           <i class="bi bi-arrow-right-circle-fill"></i>
@@ -319,7 +319,7 @@
       </section>
 
       <!-- Testimonios -->
-      <section id="testimonios" class="testimonios seccion-clara">
+      <section id="testimonios" class="testimonios">
       <h2 class="seccion-titulo">Testimonios</h2>
       <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>
       
@@ -414,23 +414,23 @@
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">2024 HiTech Studio. Todos los derechos reservados &#169;</div>
+      <div class="derechos-de-autor">2024 Studio. Todos los derechos reservados &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
-        const carousel = document.querySelector('.carousel-inner');
-        const items = carousel.querySelectorAll('.carousel-item');
-        let currentIndex = 0;
+        // Carousel de noticias:
+        // const carousel = document.querySelector('.carousel-inner');
+        // const items = carousel.querySelectorAll('.carousel-item');
+        // let currentIndex = 0;
   
-        function rotateCarousel() {
-          currentIndex = (currentIndex + 1) % items.length;
-          carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
-        }
-  
-        setInterval(rotateCarousel, 5000);
+        // function rotateCarousel() {
+        //   currentIndex = (currentIndex + 1) % items.length;
+        //   carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+        // }
+        // setInterval(rotateCarousel, 5000);
   
         const cards = document.querySelectorAll('.card');
         
